# cdo

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  OPERATORS  README  acinclude.m4  aclocal.m4  cdo.settings.in  cdo.spec  cdo.spec.in  cdo_1.4.0.1~dfsg.orig.tar.gz.delta  cdo_1.4.0.1~dfsg.orig.tar.gz.id  cdo_1.4.5.dfsg.1.orig.tar.gz.delta  cdo_1.4.5.dfsg.1.orig.tar.gz.id  cdo_1.5.3.dfsg.1.orig.tar.gz.delta  cdo_1.5.3.dfsg.1.orig.tar.gz.id  cdo_1.5.4+dfsg.1.orig.tar.gz.delta  cdo_1.5.4+dfsg.1.orig.tar.gz.id  cdo_1.5.6.1+dfsg.1.orig.tar.bz2.delta  cdo_1.5.6.1+dfsg.1.orig.tar.bz2.id  cdo_1.6.2+dfsg.1.orig.tar.gz.delta  cdo_1.6.2+dfsg.1.orig.tar.gz.id  cdo_1.6.3.orig.tar.gz.delta  cdo_1.6.3.orig.tar.gz.id  cdo_1.6.4+dfsg.1.orig.tar.xz.delta  cdo_1.6.4+dfsg.1.orig.tar.xz.id  cdo_1.6.4.orig.tar.gz.delta  cdo_1.6.4.orig.tar.gz.id  cdo_1.6.5+dfsg.1.orig.tar.xz.delta  cdo_1.6.5+dfsg.1.orig.tar.xz.id  cdo_1.6.6.orig.tar.gz.delta  cdo_1.6.6.orig.tar.gz.id  cdo_1.6.7.orig.tar.gz.delta  cdo_1.6.7.orig.tar.gz.id  cdo_1.6.8.orig.tar.gz.delta  cdo_1.6.8.orig.tar.gz.id  configure  configure.ac
config/: ._default  config.sub  default
contrib/: Makefile.am  Makefile.in  cdoCompletion.bash  cdoCompletion.tcsh  cdoCompletion.zsh  makecompl.rb
debian/: README.dfsg  TODO  autoreconf.before  cdo.docs  changelog  control  copyright  libcdi-dev.install  libcdi0.install  rules  watch  watch.broken
debian/patches/: build-fixes.patch  disable-tests.patch  fix-ppc64el.diff  fix-ppc64el.patch  fix.ppc64el.patch  fix_typos.patch  gotocc-fix.patch  ignore.patch  series  uchar_fix.patch  x.patch  y.patch
debian/source/: lintian-overrides
libcdi/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  cdi.settings.in  configure  configure.ac
libcdi/app/: Makefile.in  cdi.c  createtable.c  printinfo.h
libcdi/config/: default
libcdi/examples/: Makefile.am  Makefile.in  cdi_copy.c  cdi_read.c  cdi_read_f2003.f90  cdi_write.c  cdi_write_ens.c  cdi_write_f2003.f90  cdi_write_hybrid.c
libcdi/examples/pio/: Makefile.am  Makefile.in  collectData.c  collectData2003.F90  collectDataNStreams.c  compareResourcesArray.c
libcdi/interfaces/: Makefile.am  Makefile.in  cdi.cpp  cdi.hpp
libcdi/interfaces/f2003/: bindGen.rb
libcdi/interfaces/python/: CdiObj.py  cdiobj_wrap.cpp  testObj.py
libcdi/interfaces/ruby/: cdiobj_wrap.cpp
libcdi/m4/: acx_options.m4  acx_sl_fc_mod_path_flag.m4  acx_sl_mod_suffix.m4  ax_pthread.m4  starlink_fpp.m4
libcdi/src/: Makefile.am  Makefile.in  basetime.c  basetime.h  calendar.c  cdf.c  cdf_int.c  cdf_int.h  cdi.h  cdi.inc  cdiFortran.c  cdiFortran.h  cdi_cksum.c  cdi_cksum.h  cdi_error.c  cdi_int.c  cdi_int.h  cdi_limits.h  cdi_util.c  cdilib.c  cdipio.h  cdipio.inc  cdipioFortran.c  cfortran.h  cgribex.h  cgribexlib.c  cksum.c  cksum.h  config.h.in  dmemory.c  dmemory.h  error.c  error.h  extralib.c  file.c  file.h  gaussgrid.c  gaussgrid.h  gribapi.c  gribapi.h  (+85 more)
libcdi/src/pkgconfig/: cdi.pc.in
libcdi/tests/: Makefile.am  Makefile.in  cksum.c  cksum.h  cksum_read.c  cksum_verify  cksum_verify.c  cksum_write.c  create_uuid.c  deco2d_model.c  ensure_array_size.c  pio_cksum_asynch  pio_cksum_asynch.in  pio_cksum_cdf  pio_cksum_cdf.in  pio_cksum_fpguard  pio_cksum_fpguard.in  pio_cksum_mpinonb  pio_cksum_mpinonb.in  pio_cksum_writer  pio_cksum_writer.in  pio_write.c  pio_write_deco2d_run.in  pio_write_run  pio_write_run.in  simple_model.c  simple_model_helper.c  simple_model_helper.h  stream_cksum.c  test_cdf_read.c  test_cdf_transformation.in  test_cdf_write.c  test_grib.c  test_grib.sh  test_resource_copy  test_resource_copy.c
libcdi/util/: sunf95preproc-wrapper  xlfpreproc-wrapper
m4/: ._ax_pthread.m4  ac_fc_freeform.m4  ac_lang_program_fortran.m4  acx_fc_library_ldflags.m4  acx_lang_c_check_include.m4  acx_lang_check_include.m4  acx_lang_fortran_check_include.m4  acx_lang_package.m4  acx_m4_generate_subsets.m4  acx_option_search_libs.m4  acx_options.m4
src/: ._CdoMagicsMapper.h  ._Maggraph.c  ._Magplot.c  ._Magvector.c  ._Makefile.am  ._StringUtilities.c  ._StringUtilities.h  ._magics_template_parser.c  ._magics_template_parser.h  ._results_template_parser.c  ._results_template_parser.h  ._template_parser.c  ._template_parser.h  Adisit.c  Arith.c  Arithc.c  Arithdays.c  Arithlat.c  CDIread.c  CDItest.c  CDIwrite.c  Cat.c  CdoMagicsMapper.c  Change.c  Change_e5slm.c  Cloudlayer.c  Collgrid.c  Command.c  Comp.c  Compc.c  Complextorect.c  Cond.c  Cond2.c  Condc.c  Consecstat.c  Copy.c  Del29feb.c  Deltime.c  Derivepar.c  Detrend.c  (+293 more)
src/clipping/: area.c  area.h  clipping.c  clipping.h  dep_list.h  ensure_array_size.c  ensure_array_size.h  geometry.h  geometry_tools.c  grid.h  grid_cell.c  grid_cell.h  intersection.c  points.h  utils.c  utils.h
test/: Arith.test.in  File.test.in  Genweights.test.in  Gradsdes.test.in  Makefile.am  Makefile.in  Remap.test.in  Select.test.in  Spectral.test.in  testStreams.py  test_Cat.sh  test_Gridarea.sh  test_Remap.sh  test_Select.sh  test_Spectral.sh  test_Timstat.sh  test_Vertint.sh
test/data/: ._netcdf_testfile01.nc  Makefile.am  Makefile.in  grib_testfile01.grb  grib_testfile01_info_ref  grib_testfile01_sinfo_ref  hl_l19.grb  ml2pl_ref  netcdf_testfile01_infon_ref  netcdf_testfile01_sinfon_ref
